src/test/deca/context/invalid/provided/ContextSansObjet/OperationsArithmetiques/MultiplyString.deca
//Description :
//	Vérification contextuelle de l'opérateur * avec des variables string
//
//Résultats :
//	ligne 8 : les opérateurs doivent ètre de type numérique (int ou float)
{
    string x = "Hello, ";
    string y = "world" * 3;
    string z = x*y;
    y = x*y;
}